# wikirag_server

./: Cargo.toml
src/: css.css  form_template.html  main.rs  result_template.html
