[package]
name = "wikirag_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.20.0"
tokio = { version = "1.38.0", features = ["sync", "macros", "rt-multi-thread"] }
warp = { version = "0.3.7", features = ["tls", "tokio-rustls"] }
